work against #42, so far works only on program, source document and annotation content. updated bootstrap to version 3.2 so added multiselect plugin can work.