@@ -4,6 +4,7 @@
  */
 package cz.muni.fi.mir.convertors;
 
+import cz.muni.fi.mir.db.domain.Program;
 import cz.muni.fi.mir.db.service.ProgramService;
 import cz.muni.fi.mir.forms.ProgramForm;
 import cz.muni.fi.mir.tools.Tools;
@@ -15,14 +16,13 @@ import org.springframework.core.convert.converter.Converter;
  *
  * @author siska
  */
-public class StringToProgram implements Converter<String, ProgramForm>
+public class StringToProgram implements Converter<String, Program>
 {
     @Autowired private ProgramService programService;
-    @Autowired private Mapper mapper;
 
 
     @Override
-    public ProgramForm convert(String source)
+    public Program convert(String source)
     {
         if(Tools.getInstance().stringIsEmpty(source))
         {
@@ -36,7 +36,7 @@ public class StringToProgram implements Converter<String, ProgramForm>
             }
             else
             {
-                return mapper.map(programService.getProgramByID(new Long(source)), ProgramForm.class);
+                return programService.getProgramByID(Long.valueOf(source));
             }
         }
     }
